--- a/alueclient/app/build.gradle
+++ b/alueclient/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
+    implementation 'com.android.volley:volley:1.1.1'
+
     def room_version = "2.1.0-alpha07"
 
     implementation "androidx.room:room-runtime:$room_version"
