--- a/alueclient/app/src/main/AndroidManifest.xml
+++ b/alueclient/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -20,6 +21,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".data.DataTest">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".network.NetworkTest">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
