基本功能开发完毕！

--- a/alueclient/app/src/main/AndroidManifest.xml
+++ b/alueclient/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER_HINTS"/>
 
     <application
         android:allowBackup="true"
@@ -16,9 +17,10 @@
         android:supportsRtl="true"
 
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/AppTheme"
         >
         <activity android:name=".Activity.AlueMainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
