--- a/alueclient/app/build.gradle
+++ b/alueclient/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.ervinxie.alue_client"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "beta:1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
