--- a/alueclient/app/build.gradle
+++ b/alueclient/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.ervinxie.alue_client"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 2
-        versionName "beta:1.0.2"
+        versionCode 4
+        versionName "beta:1.0.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -87,5 +87,10 @@ dependencies {
     // https://github.com/chrisbanes/PhotoView/releases
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 
+    //支付宝接口
     compile (name: 'alipaySdk-15.6.2-20190416165036', ext: 'aar')
+
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.4.0'
+
+
 }
